# OtterPasswordManager

./: .gitignore  LICENSE  README.md  pl_readme.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260717_01_create_users.py  20260718_02_create_password_entries.py
backend/src/otter_password_manager/: __init__.py  __main__.py  main.py
backend/src/otter_password_manager/application/: __init__.py  exceptions.py
backend/src/otter_password_manager/application/dto/: __init__.py  password_entries.py  tokens.py
backend/src/otter_password_manager/application/ports/: __init__.py  encryption.py  password_hasher.py  token_service.py  unit_of_work.py
backend/src/otter_password_manager/application/services/: __init__.py  authentication_service.py  password_entry_service.py  user_service.py
backend/src/otter_password_manager/domain/: __init__.py
backend/src/otter_password_manager/domain/entities/: __init__.py  password_entry.py  user.py
backend/src/otter_password_manager/domain/repositories/: __init__.py  password_entry_repository.py  user_repository.py
backend/src/otter_password_manager/infrastructure/: __init__.py  container.py
backend/src/otter_password_manager/presentation/: __init__.py  exception_handlers.py
backend/tests/unit/: test_argon2_password_hasher.py  test_authentication_middleware.py  test_authentication_service.py  test_encryption_service.py  test_jwt_token_service.py  test_password_entry_service.py  test_user_service.py
docs/: README.md  api.md  backend.md  (+6 more)
(+73 files in other folders)
