[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otter-password-manager"
version = "0.1.0"
description = "Backend API for Otter Password Manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20,<1",
    "alembic>=1.14,<2",
    "argon2-cffi>=23.1,<26",
    "cryptography>=44,<48",
    "fastapi>=0.115,<1",
    "pyjwt>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/otter_password_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
